# finops-lite

./: .gitignore  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-2.md  README.md  README2.md  audit.py  cli.py  display.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
cli/: signals.py
config/templates/: finops.yaml
docs/: README.md  decision-signals-demo.md
examples/: README.md  aws-billing-sample.csv  azure-billing-sample.csv  gcp-billing-sample.csv  sample-cost-report.csv  sample-cost-report.json
finops-lite-main/finops_lite/: cli.py
finops-lite-main/finops_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
finops_lite/: __init__.py  cli.py  demo.py  main.py  summary.py
finops_lite/core/: __init__.py  cost_explorer.py
finops_lite/fixtures/: ce_cost_and_usage.backup.json  ce_cost_and_usage.json
finops_lite/providers/: __init__.py  detector.py
finops_lite/reports/: formatters.py
finops_lite/signals/: cli.py  from_services.py  models.py
finops_lite/utils/: aws_client.py  config.py  errors.py  logger.py
finops_lite/utils/performance/: __init__.py  cache_manager.py  performance_utils.py
reports/: demo_report.json
signals/: __init__.py  from_services.py  models.py
sql-analysis/: README.md  cloud_cost_sample.csv  queries.sql  schema.sql
tests/: test_basic.py  test_cli.py  test_error_mapping_cli.py  test_import.py  test_step1_cost_export_signals.py  test_summary.py
