[project]
name = "finops-lite"
version = "0.0.1"
description = "AWS FinOps CLI — totals, last-month fallback, and cost-by-service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
]

[project.scripts]
finops-lite = "finops_lite.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["finops_lite"]
