[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-lite"
version = "0.1.0"
description = "AWS FinOps CLI for cost visibility, optimization, and governance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Diana", email = "your.email@example.com"},
]
keywords = ["aws", "finops", "cost-optimization", "cloud", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "jmespath>=1.0.1",
]

[project.scripts]
finops = "finops_lite.cli:main"
finops-lite = "finops_lite.cli:main"

[project.urls]
Homepage = "https://github.com/dianuhs/finops-lite"
Repository = "https://github.com/dianuhs/finops-lite.git"
"Bug Tracker" = "https://github.com/dianuhs/finops-lite/issues"

[tool.hatch.version]
path = "finops_lite/__init__.py"